--- a/style.css
+++ b/style.css
@@ -250,10 +250,25 @@ footer p {
     }
     footer p {
         font-size: 20px;
+        text-align: center;
     }
 }
 
 @media (min-width: 3070px) {
+    footer {
+        position: absolute;
+        bottom: 0;
+    }
+}
+
+@media (min-height: 1024px) {
+    footer {
+        position: static;
+        bottom: 0;
+    }
+}
+
+@media (min-height: 1180px) {
     footer {
         position: absolute;
         bottom: 0;
