--- a/Pages/Drivers/style.css
+++ b/Pages/Drivers/style.css
@@ -2,7 +2,6 @@
 
 * {
     padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 
@@ -13,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
 }
 
 header {
@@ -179,7 +179,7 @@ footer p {
 
 @media (min-height: 1024px) {
     footer {
-        position: absolute;
+        position: sticky;
         bottom: 0;
     }
 }
